-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.2.0
-
None
-
-
2021wk50POAndroid&Mobile, 2022wk02FOAndroid&Automotive, 2022wk04FOAndroid&Automotive, 2022wk06FOAndroid&Automotive, 2022wk22FOQtforAndroid, 2022wk24FOQtforAndroid
QAudioSink on The Spectrum app always return UnderrunError after generated tone has been played.
Steps to reproduce:
1. Run spectrum example on Android device
2. SelectPlay generated tone from Modes
3. Once sound ended press play button
UnderrunError: Audio data is not being fed to the audio device at a fast enough rate
Tested on Nokia 6.1(A10) and OnePlus 7(A11)
For Gerrit Dashboard: QTBUG-97492 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
414174,4 | Android: Fix for UnderrunError on QAndroidAudioSink | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
414859,2 | Android: Fix for UnderrunError on QAndroidAudioSink | 6.4 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
414860,4 | Android: Fix for UnderrunError on QAndroidAudioSink | 6.3 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
414861,6 | Android: Fix for UnderrunError on QAndroidAudioSink | tqtc/lts-6.2 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |